--- a/.github/actions/worflow.yml
+++ b/.github/actions/worflow.yml
@@ -4,7 +4,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      name: my-action
-      uses: ./.github/actions/hello-world/action.yml
-      with:
-        name: Rohit
+      - name: my-action
+        uses: ./.github/actions/hello-world/action.yml
+        with:
+          name: Rohit
