--- a/.github/workflows/worflow.yml
+++ b/.github/workflows/worflow.yml
@@ -7,6 +7,6 @@ jobs:
       - name: checkout the code
         uses: actions/checkout@v4 
       - name: my-action
-        uses: ./.github/actions/hello-world/action.yml
+        uses: ./.github/actions/hello-world
         with:
           name: Rohit
