--- a/.github/workflows/worflow.yml
+++ b/.github/workflows/worflow.yml
@@ -4,6 +4,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: my-action
         uses: ./.github/actions/hello-world
         with:
